# pdfmux

./: .gitignore  .pdfmux.example.yaml  ARCH-READING-ORDER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  NOTICE  README.md  glama.json  pyproject.toml  pyrightconfig.json  server.json  smithery.yaml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-site.yml  keyword-analysis.yml  publish-mcp.yml  publish.yml  security.yml  write-post.yml
benchmarks/: run_benchmark.py
benchmarks/output/: BENCHMARK-FINDINGS.md  CTO-ARCHITECTURE-PLAN.md  PRODUCT-IMPROVEMENT-BRIEF.md  benchmark-results.json
blog/: competitors.json  content-queue.json  events-calendar.json  hugo.toml
blog/archetypes/: default.md
blog/content/posts/: benchmarking-pdf-extractors.md  real-world-pdf-benchmark.md
blog/layouts/_default/: baseof.html  list.html  single.html
blog/layouts/partials/: footer.html  nav.html  scripts.html  styles.html
blog/scripts/: enrich.py  keyword-analysis.py  product-context.txt  write-post.py
design-system/: lint.py
docs/: ARCHITECTURE.md  CHANGELOG.md
eval/: README.md  ab_models.py  benchmark_pypdf.py  build_ab_dataset.py  build_fixtures.py  calibrate.py  labels.csv  run_eval.py
eval/ab_datasets/: intl-19.gt.md  intl-20.gt.md  invoice-01.gt.md  invoice-02.gt.md  invoice-03.gt.md  kv-04.gt.md  list-13.gt.md  list-14.gt.md  list-15.gt.md  mixed-16.gt.md  mixed-17.gt.md  mixed-18.gt.md  prose-09.gt.md  prose-10.gt.md  prose-11.gt.md  prose-12.gt.md  table-05.gt.md  table-06.gt.md  table-07.gt.md  table-08.gt.md
integrations/llama-index-readers-pdfmux/: .gitignore  CHANGELOG.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
integrations/llama-index-readers-pdfmux/llama_index/readers/pdfmux/: __init__.py  base.py
integrations/llama-index-readers-pdfmux/tests/: test_readers_pdfmux.py
integrations/mcp-extract-pdf/: README.md
npm-wrapper/: README.md  index.js  package.json
pdfmux-bench/: .gitignore  CONTRIBUTING.md  LAUNCH.md  LEADERBOARD.md  LICENSE  README.md  VERIFIER-VALIDATION.json  VERIFIER-VALIDATION.md  leaderboard.py  requirements.txt  run_bench.py  scoring.py  validate_verifier.py
pdfmux-bench/.github/workflows/: bench.yml
pdfmux-bench/adapters/: __init__.py  base.py  docling.py  llamaparse.py  marker.py  mineru.py  mistral_ocr.py  pdfmux_local.py  reducto.py
pdfmux-bench/corpus/: PREREGISTRATION.md  README.md  agreement-report.md  agreement.py  fetch_corpus.py  manifest.json
pdfmux-bench/corpus/academic/: arxiv-1706.03762-attention.gt.md  arxiv-1810.04805-bert.gt.md
pdfmux-bench/corpus/annotations/pass1/: arxiv-1512.03385-resnet.gt.md  gao-24-106214.gt.md  letter-peabody-1863.gt.md  rfc2616-http.gt.md  telegram-garfield-1881.gt.md
pdfmux-bench/corpus/annotations/pass2/: ar-morocco-petitions-44-14.gt.md  irs-fw9.gt.md  letter-peabody-1863.gt.md  telegram-garfield-1881.gt.md
pdfmux-bench/corpus/complex-tables/: arxiv-2203.02155-instructgpt.gt.md  bls-empsit.gt.md
pdfmux-bench/corpus/degraded/: irish-census-1926.gt.md  statute-1-1789.gt.md  usgs-bul-0002.gt.md
pdfmux-bench/corpus/digital-native/: rfc1951-deflate.gt.md  rfc9110-http-semantics.gt.md
pdfmux-bench/corpus/forms/: irs-f1040.gt.md  irs-fw4.gt.md
pdfmux-bench/corpus/handwriting/: letter-beloved-friend-garrison.gt.md  letter-dear-friend-garrison.gt.md
pdfmux-bench/corpus/rtl/: ar-morocco-langculture-04-16.gt.md  he-declaration-commentary.gt.md
pdfmux-bench/corpus/scanned/: ndl-hainan-memo.gt.md  ndl-treaty-report.gt.md  telegram-garfield-1881.gt.md
pdfmux-bench/tests/: test_seeding.py
scripts/: benchmark_gemma4.py  demo-sequence.sh  record-demo.sh
site/: index.html  privacy.html  terms.html
src/pdfmux/: __init__.py  _timeout.py  agentic.py  arabic.py  audit.py  calibration.py  chunking.py  cli.py  column_reorder.py  detect.py  errors.py  headings.py  image_table_ocr.py  kv_extract.py  manifest_verify.py  mcp_extract.py  mcp_server.py  ml_headings.py  normalize.py  path_safety.py  pdf_cache.py  pipeline.py  policy.py  postprocess.py  profiles.py  regions.py  result_cache.py  retry.py  schema.py  segment.py  streaming.py  table_fallback.py  types.py  verifier.py
src/pdfmux/eval/: __init__.py  metrics.py  runner.py
src/pdfmux/extractors/: __init__.py  fast.py  llm.py  marker.py  mistral_ocr.py  ocr.py  opendataloader.py  rapid_ocr.py  tables.py
src/pdfmux/formatters/: json_fmt.py
src/pdfmux/models/: heading_classifier.pkl
src/pdfmux/providers/: _discovery.py  base.py  claude.py  gemini.py  gemma.py  ollama.py  openai_compatible.py  openai_native.py
src/pdfmux/router/: __init__.py  engine.py  learning.py  scorer.py  strategies.py
src/readable/: __init__.py  pipeline.py
src/readable/extractors/: llm.py  ocr.py  tables.py
src/readable/formatters/: json_fmt.py
tests/: test_agentic.py  test_api_stability.py  test_arabic.py  test_audit.py  test_audit_cli.py  test_calibration.py  test_cli.py  test_decision_trace.py  test_dependency_regression.py  test_detect.py  test_diff.py  test_doctor.py  test_errors.py  test_estimate.py  test_eval_metrics.py  test_eval_runner.py  test_extractors.py  test_gemma_provider.py  test_headings.py  test_html_tables.py  test_learning.py  test_llm_providers.py  test_manifest_verify.py  test_marker.py  test_mcp_convert.py  test_mcp_enhanced.py  test_mcp_server.py  test_mistral_ocr.py  test_ml_tables.py  test_pdf_cache.py  test_pipeline.py  test_policy.py  test_postprocess.py  test_profiles.py  test_provenance.py  test_providers_base.py  test_public_api.py  test_rag_chunking.py  test_rapid_ocr.py  test_real_world_failures.py  (+12 more)
